# tokenizer.axera

./: .gitignore  CMakeLists.txt  build.sh  build_aarch64.sh  build_mingw64.sh
.github/workflows/: build.yml
include/: BaseTokenizer.hpp
src/: BaseMixinTokenizer.hpp  BaseTokenizer.cpp  InternVL3Tokenizer.hpp  Qwen3Tokenizer.hpp  SmolVLM2Tokenizer.hpp
src/tokenizer/: tokenizer_hf.cpp  tokenizer_hf.hpp  tokenizer_optimized.hpp
src/utils/: num2words_en.hpp
tests/: test_num2words_en.cpp  test_tokenizer.cpp
